--- a/be/vercel.json
+++ b/be/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "build": [
+  "builds": [
     {
       "src": "src/index.js",
       "use": "@vercel/node"
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/"
+      "dest": "src/index.js"
     }
   ]
 }
