--- a/be/package.json
+++ b/be/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
-    "build": "express build --output public",
-    "vercel-build": "prisma generate && npm run build"
+    "start": "node src/index.js"
   },
   "author": "",
   "license": "ISC",
